<resources>
    <string name="app_name">강남역\n11번 출구</string>
    <string name="tag">태그</string>
    <string name="time">시간</string>
    <string name="price">장소</string>
    <string name="member">인원</string>
    <string name="add">등록</string>

    <string name="action_settings">Settings</string>
    <string name="room_member">방 인원</string>
    <string name="together_food">“ 함께 먹고 싶은 음식이 있나요? ”</string>
    <string name="hint_tag">먹고 싶은 음식을 태그 해주세요.</string>
    <string name="hint_time">함께 만날 시간을 정해주세요.</string>
    <string name="hint_place">만날 장소를 정해주세요.</string>
    <string name="hint_person">몇 명과 먹고싶은지 정해주세요.</string>
    <string name="add_party">약속 등록하기</string>
    <string name="choice_menu">먹고싶은 메뉴를 골라주세요.</string>
    <string name="choice_detail_partiy_info">구체적인 약속을 잡아주세요.</string>
    <string name="when">언제</string>
    <string name="where">어디서</string>
    <string name="people">몇명과</string>
    <string name="people_num">몇 명과 함께 만날까요?</string>
    <string name="close">닫기</string>
    <string name="next_step">다음 단계</string>

    <string name="people_two">2명</string>
    <string name="people_three">3명</string>
    <string name="people_four">4명</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>


    <string name="prev_step">이전단계</string>
    <string name="add_party_hash_tag">약속에 태그를 달아주세요</string>
    <string name="hash_tag_hint">ex) 청와대 배달치킨</string>
    <string name="error_open_setting_activity">설정을 열지 못하였습니다.</string>
    <string name="add_party_detail">구체적인 약속을 잡아주세요</string>
    <string name="finish">완료</string>
    <string name="finish_add_party">약속이 생성되었습니다</string>
    <string name="join_party">참여하기</string>
</resources>
