<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black" />

    <RelativeLayout
        android:id="@+id/layout_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="74dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        app:behavior_hideable="false"
        app:behavior_peekHeight="40dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_main_background"
            android:layout_marginBottom="98dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_up"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <ImageView
                    android:id="@+id/image01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_arrow"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/add_party"
                    android:textColor="@color/dark_gray"
                    android:textSize="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image01" />

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/text01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:text="@string/choice_menu"
                android:textColor="@android:color/black"
                android:textSize="13sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/layout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="27dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text01">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/warm_grey"
                    android:layout_centerInParent="true" />

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:max="100"
                    android:progress="25"
                    android:progressDrawable="@drawable/progress_add_party" />

            </RelativeLayout>

            <io.mashup.exit11.ui.view.SwipeViewPager
                android:id="@+id/view_pager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="21dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="21dp"
                app:layout_constraintBottom_toTopOf="@+id/view01"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout01" />

            <View
                android:id="@+id/view01"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:background="@color/greyish"
                app:layout_constraintBottom_toTopOf="@+id/button_close"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_pager" />

            <Button
                android:id="@+id/button_close"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:background="@android:color/transparent"
                android:text="@string/close"
                android:textColor="@color/rouge"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/view02" />

            <View
                android:id="@+id/view02"
                android:layout_width="0.5dp"
                android:layout_height="43dp"
                android:background="@color/greyish"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/button_close"
                app:layout_constraintRight_toLeftOf="@+id/button_next" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:background="@android:color/transparent"
                android:text="@string/next_step"
                android:textColor="@color/rouge"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/view02"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
